--- a/gulimall-coupon/src/main/resources/bootstrap.properties
+++ b/gulimall-coupon/src/main/resources/bootstrap.properties
@@ -1,2 +1,3 @@
 spring.application.name=gulimall-coupon
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.namespace=2b033abc-bf4e-467c-b3f2-c6cf2c80ec40
