--- a/gulimall-gateway/src/main/resources/bootstrap.properties
+++ b/gulimall-gateway/src/main/resources/bootstrap.properties
@@ -1,2 +1,3 @@
 spring.application.name=gulimall-gateway
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.namespace=9555cce9-caf9-4ae1-beda-a76533dee157
