--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <version>3.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
