--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
 
   application:
     name: gulimall-product
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
@@ -26,3 +28,4 @@ server:
 logging:
   level:
     com.xwh.gulimall: debug
+
