--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     name: gulimall-product
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+  thymeleaf:
+    cache: false
+
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
@@ -28,4 +31,3 @@ server:
 logging:
   level:
     com.xwh.gulimall: debug
-
