--- a/gulimall-search/src/main/resources/bootstrap.properties
+++ b/gulimall-search/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name=gulimall-search
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-spring.cloud.nacos.config.namespace=1858c6c3-3ecb-4747-88ad-eb9ddfedc80d
+#spring.cloud.nacos.config.namespace=e2350947-00ff-4867-b501-fe95af9da91b
