--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>httpcore</artifactId>
             <version>4.4.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-lang</groupId>
