--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,6 @@
         <module>gulimall-common</module>
         <module>gulimall-third-party</module>
         <module>gulimall-search</module>
+        <module>gulimall-search1</module>
     </modules>
 </project>
