--- a/gulimall-third-party/src/main/resources/bootstrap.properties
+++ b/gulimall-third-party/src/main/resources/bootstrap.properties
@@ -5,3 +5,7 @@ spring.cloud.nacos.config.namespace=ef49828f-989e-4339-b154-42da8eda1377
 spring.cloud.nacos.config.ext-config[0].data-id=OSS.yml
 spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.ext-config[0].refresh=true
+
+spring.cloud.nacos.config.ext-config[1].data-id=SMS_service.properties
+spring.cloud.nacos.config.ext-config[1].group=DEFAULT_GROUP
+spring.cloud.nacos.config.ext-config[1].refresh=true
