--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.cache.redis.time-to-live=3000000
 #spring.cache.redis.key-prefix=CACHE_
 spring.cache.redis.use-key-prefix=true
 spring.cache.redis.cache-null-values=true
+
+gulimall.thread.core=20
+gulimall.thread.max-size=200
+gulimall.thread.keep-alive-time=10
