--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,6 @@
         <module>gulimall-third-party</module>
         <module>gulimall-search</module>
         <module>gulimall-search1</module>
+        <module>gulimall-auth-server</module>
     </modules>
 </project>
