--- a/gulimall-auth-server/src/main/resources/bootstrap.properties
+++ b/gulimall-auth-server/src/main/resources/bootstrap.properties
@@ -1,3 +1,7 @@
 spring.application.name=gulimall-auth-server
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=b52c804c-7d0f-417e-ba46-335ca3754195
+
+spring.cloud.nacos.config.ext-config[0].data-id=gitee_oauth2.properties
+spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
+spring.cloud.nacos.config.ext-config[0].refresh=true
