项目开始本地缓存

--- a/gulimall-third-party/src/main/resources/bootstrap.properties
+++ b/gulimall-third-party/src/main/resources/bootstrap.properties
@@ -9,3 +9,7 @@ spring.cloud.nacos.config.ext-config[0].refresh=true
 spring.cloud.nacos.config.ext-config[1].data-id=SMS_service.properties
 spring.cloud.nacos.config.ext-config[1].group=DEFAULT_GROUP
 spring.cloud.nacos.config.ext-config[1].refresh=true
+
+spring.cloud.nacos.config.ext-config[2].data-id=mail.properties
+spring.cloud.nacos.config.ext-config[2].group=DEFAULT_GROUP
+spring.cloud.nacos.config.ext-config[2].refresh=true
