--- a/gulimall-search1/src/main/resources/application.properties
+++ b/gulimall-search1/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=12000
 spring.application.name=gulimall-search1
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.thymeleaf.cache=false
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.session.store-type=redis
