--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -14,7 +14,7 @@
     <name>gulimall-order</name>
     <description>gulimall-order</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>1.8</java.version>
         <spring-cloud.version>2021.0.4</spring-cloud.version>
     </properties>
     <dependencies>
@@ -25,6 +25,10 @@
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
