--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -32,11 +32,13 @@
             <artifactId>httpcore</artifactId>
             <version>4.4.12</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.60</version>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.23</version>
         </dependency>
+
 
         <dependency>
             <groupId>commons-lang</groupId>
