消息队列解锁库存

--- a/gulimall-ware/src/main/resources/application.properties
+++ b/gulimall-ware/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.cloud.alibaba.seata.tx-service-group=gulimall-ware
 spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.port=5672
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
