--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -21,3 +21,4 @@ gulimall.thread.keep-alive-time=10
 
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
