添加自定义支付功能

--- a/zhiFuBao/src/main/resources/application.properties
+++ b/zhiFuBao/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=zhiFuBao
 spring.thymeleaf.cache=false
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
+spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
