--- a/gulimall-member/src/main/resources/application.properties
+++ b/gulimall-member/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.thymeleaf.cache=false
 spring.session.store-type=redis
 spring.redis.host=127.0.0.1
+
+
+spring.cloud.sentinel.transport.dashboard=127.0.0.1:8997
+spring.cloud.sentinel.transport.port=8719
+
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
