--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -22,3 +22,15 @@ gulimall.thread.keep-alive-time=10
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
+
+spring.cloud.sentinel.transport.dashboard=127.0.0.1:8997
+spring.cloud.sentinel.transport.port=8719
+
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+
