--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -9,3 +9,14 @@ gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=10
 
 spring.session.store-type=redis
+
+spring.cloud.sentinel.transport.dashboard=127.0.0.1:8997
+spring.cloud.sentinel.transport.port=8719
+
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
