--- a/gulimall-ware/src/main/resources/application.properties
+++ b/gulimall-ware/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.port=5672
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+spring.cloud.sentinel.transport.dashboard=127.0.0.1:8997
+spring.cloud.sentinel.transport.port=8719
+
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
