--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -60,6 +60,14 @@
 					<groupId>com.alibaba.cloud</groupId>
 					<artifactId>spring-cloud-starter-alibaba-seata</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-zipkin</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.alibaba.cloud</groupId>
+					<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
