--- a/zhiFuBao/src/main/resources/application.properties
+++ b/zhiFuBao/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.thymeleaf.cache=false
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
+
+spring.cloud.sentinel.transport.dashboard=127.0.0.1:8997
+spring.cloud.sentinel.transport.port=8719
+
+management.endpoints.web.exposure.include=*
+
+feign.sentinel.enabled=true
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
